Added new font, cube counter, intersection on click & other goodies

--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="game.cpp" />
     <ClCompile Include="Image\Image.cpp" />
     <ClCompile Include="Utilities\GameObject.cpp" />
+    <ClCompile Include="Utilities\Intersection.cpp" />
     <ClCompile Include="Utilities\Pool.cpp" />
     <ClCompile Include="Window\Window.cpp">
       <RuntimeLibrary>MultiThreadedDebugDll</RuntimeLibrary>
@@ -125,6 +126,7 @@
     <ClInclude Include="Utilities\Consts.h" />
     <ClInclude Include="Utilities\GameObject.h" />
     <ClInclude Include="Utilities\ImageURLs.h" />
+    <ClInclude Include="Utilities\Intersection.h" />
     <ClInclude Include="Utilities\Pool.h" />
     <ClInclude Include="Window\Window.h" />
   </ItemGroup>
