--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="Text\Text.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="Image\Image.cpp" />
+    <ClCompile Include="Text\TextFactory.cpp" />
     <ClCompile Include="Utilities\CubeRain.cpp" />
     <ClCompile Include="Utilities\Cursor.cpp" />
     <ClCompile Include="Utilities\GameObject.cpp" />
@@ -128,6 +129,7 @@
     <ClInclude Include="Input\InputManager.h" />
     <ClInclude Include="Text\Text.h" />
     <ClInclude Include="Image\Image.h" />
+    <ClInclude Include="Text\TextFactory.h" />
     <ClInclude Include="Utilities\Consts.h" />
     <ClInclude Include="Utilities\CubeRain.h" />
     <ClInclude Include="Utilities\Cursor.h" />
