--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -43,6 +43,8 @@
     <ClCompile Include="Utilities\SaveGameUtils.cpp" />
     <ClCompile Include="Utilities\SDLUtils.cpp" />
     <ClCompile Include="Utilities\Shop.cpp" />
+    <ClCompile Include="Utilities\TextPool.cpp" />
+    <ClCompile Include="VFX\ClickVFX.cpp" />
     <ClCompile Include="Window\Window.cpp">
       <RuntimeLibrary>MultiThreadedDebugDll</RuntimeLibrary>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -145,6 +147,8 @@
     <ClInclude Include="Utilities\Pool.h" />
     <ClInclude Include="Utilities\SDLUtils.h" />
     <ClInclude Include="Utilities\Shop.h" />
+    <ClInclude Include="Utilities\TextPool.h" />
+    <ClInclude Include="VFX\ClickVFX.h" />
     <ClInclude Include="Window\Window.h" />
   </ItemGroup>
   <ItemGroup>
