Some more observer logic

--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -38,6 +38,7 @@
     <ClCompile Include="Utilities\GameObject.cpp" />
     <ClCompile Include="Utilities\IClickObserver.cpp" />
     <ClCompile Include="Utilities\Intersection.cpp" />
+    <ClCompile Include="Utilities\IObservable.cpp" />
     <ClCompile Include="Utilities\Item.cpp" />
     <ClCompile Include="Utilities\ItemFactory.cpp" />
     <ClCompile Include="Utilities\Pool.cpp" />
@@ -144,6 +145,7 @@
     <ClInclude Include="Utilities\IClickObserver.h" />
     <ClInclude Include="Utilities\ImageURLs.h" />
     <ClInclude Include="Utilities\Intersection.h" />
+    <ClInclude Include="Utilities\IObservable.h" />
     <ClInclude Include="Utilities\Item.h" />
     <ClInclude Include="Utilities\ItemFactory.h" />
     <ClInclude Include="Utilities\Pool.h" />
