--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -36,6 +36,7 @@
     <ClCompile Include="Utilities\CubeRain.cpp" />
     <ClCompile Include="Utilities\Cursor.cpp" />
     <ClCompile Include="Utilities\GameObject.cpp" />
+    <ClCompile Include="Utilities\GameObjectFactory.cpp" />
     <ClCompile Include="Utilities\IClickObserver.cpp" />
     <ClCompile Include="Utilities\Intersection.cpp" />
     <ClCompile Include="Utilities\IObservable.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="Utilities\CubeRain.h" />
     <ClInclude Include="Utilities\Cursor.h" />
     <ClInclude Include="Utilities\GameObject.h" />
+    <ClInclude Include="Utilities\GameObjectFactory.h" />
     <ClInclude Include="Utilities\GameState.h" />
     <ClInclude Include="Utilities\IClickObserver.h" />
     <ClInclude Include="Utilities\ImageURLs.h" />
